Fix reponsive single-postpost

--- a/assets/css/single-card.css
+++ b/assets/css/single-card.css
@@ -3,13 +3,28 @@
     font-size: 30px;
 }
 
+
 .single-card__description {
     color: var(--single-text-color);
     font-size: 20px;
-    margin: 20px 0;
+    max-width: 60%;
+    margin: 0 auto;
 }
 
 .single-card__image {
     width: 60%;
     margin: 0 auto;
 } 
+
+@media (max-width: 768px) {
+    .single-card__title{
+        font-size: 20px;
+    }
+    .single-card__image{
+        width: 100%;
+    }
+    .single-card__description{
+        font-size: 18px;
+        max-width: 100%;
+    }
+}
