--- a/assets/css/single-gift-wrapping.css
+++ b/assets/css/single-gift-wrapping.css
@@ -6,10 +6,25 @@
 .single-gift-wrapping__description {
     color: var(--single-text-color);
     font-size: 20px;
-    margin: 20px 0;
+    max-width: 60%;
+    margin: 0px auto;
 }
+
 
 .single-gift-wrapping__image {
     width: 60%;
     margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+    .single-gift-wrapping__title{
+        font-size: 20px;
+    }
+    .single-gift-wrapping__image{
+        width: 100%;
+    }
+    .single-gift-wrapping__description{
+        font-size: 18px;
+        max-width: 100%;
+    }
 }
