--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -13,4 +13,5 @@
 @import url('single-washing.css');
 @import url('single-card.css');
 @import url('product.css');
+@import url('cart.css');
 @import url('search.css');
