Add featured categories and update product detaildetail

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,3 +17,4 @@
 @import url('search.css');
 @import url('promotional-prices.css');
 @import url('category-page.css');
+@import url('featured-categories.css');
